step4 done, TODO: fix (fn*) implementation bug